--- a/index.html
+++ b/index.html
@@ -3,10 +3,128 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practica clase 23 de agosto</title>
+    <title>Empresas de streaming</title>
+
+    <style>
+        h1{
+            color:#00d9ff;
+            text-align: center;
+            font-size: 3rem;
+        }
+
+        body {
+            font-family:'Times New Roman', Times, serif;
+            background-image:url(31112.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
+            color: #ffffff;
+
+        }
+
+        .derecho {
+            text-align: left;
+        }
+
+        nav {
+            text-align: center;
+            color:#ffffff;
+        }
+
+        .centrado {
+            text-align: center;
+        }
+    </style>
+
 </head>
 <body>
-    <h1>Ejemplo de pagina</h1>
-    <marquee>Somos la empresa numero uno!!!</marquee>
+
+    <head>
+        <h1>Principales empresas de streaming</h1>
+    
+        <nav>
+            <a href="index.html">Inicio</a>
+            <a href="#Contenido">Contenido</a>
+            <a href="#Contacto">Contacto</a>
+        </nav>
+    </head>
+
+    <main id="Contenido">
+        <section>
+            <h2 class="centrado">Netflix</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, voluptatum magni. Totam porro, ipsa quos ex facilis maxime veniam quae possimus doloremque deleniti fugiat odit, repudiandae obcaecati inventore recusandae tempora.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repudiandae omnis perspiciatis. Iste natus, corporis porro praesentium eveniet earum ex placeat ratione ad expedita recusandae velit molestias vero. Recusandae, id.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus praesentium quidem nulla voluptate corrupti quam vitae voluptatibus quisquam suscipit! Ut ullam aliquid ipsam harum doloremque aut commodi error at consectetur?</p>
+            <a href="https://www.netflix.com/mx/">Mas informacion</a>
+        </section>
+
+        <section>
+            <h2 class="centrado">Amazon Prime </h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, voluptatum magni. Totam porro, ipsa quos ex facilis maxime veniam quae possimus doloremque deleniti fugiat odit, repudiandae obcaecati inventore recusandae tempora.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repudiandae omnis perspiciatis. Iste natus, corporis porro praesentium eveniet earum ex placeat ratione ad expedita recusandae velit molestias vero. Recusandae, id.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus praesentium quidem nulla voluptate corrupti quam vitae voluptatibus quisquam suscipit! Ut ullam aliquid ipsam harum doloremque aut commodi error at consectetur?</p>
+            <a href="https://www.primevideo.com/offers/nonprimehomepage/ref=dvm_pds_cpb_mx_dc_s_g_mkw_skAa1gDO1-dc_pcrid_620391334303?mrntrk=slid__pgrid_44062037207_pgeo_9142202_x__adext__ptid_kwd-2850171361">Mas informacion</a>
+        </section>
+
+        <section>
+            <h2 class="centrado">Disney</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, voluptatum magni. Totam porro, ipsa quos ex facilis maxime veniam quae possimus doloremque deleniti fugiat odit, repudiandae obcaecati inventore recusandae tempora.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repudiandae omnis perspiciatis. Iste natus, corporis porro praesentium eveniet earum ex placeat ratione ad expedita recusandae velit molestias vero. Recusandae, id.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus praesentium quidem nulla voluptate corrupti quam vitae voluptatibus quisquam suscipit! Ut ullam aliquid ipsam harum doloremque aut commodi error at consectetur?</p>
+            <a href="https://www.disneyplus.com/es-mx?cid=DSS-Search-Google-71700000075996355-&s_kwcid=AL!8468!3!575464990072!e!!g!!disney%2B&gad=1&gclid=EAIaIQobChMIwcLo0f3ygAMVGAytBh3NQAhLEAAYASAAEgLBhPD_BwE&gclsrc=aw.ds">Mas informacion</a>
+        </section>
+
+        <section>
+            <h2 class="centrado">HBO y HBO Max</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, voluptatum magni. Totam porro, ipsa quos ex facilis maxime veniam quae possimus doloremque deleniti fugiat odit, repudiandae obcaecati inventore recusandae tempora.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repudiandae omnis perspiciatis. Iste natus, corporis porro praesentium eveniet earum ex placeat ratione ad expedita recusandae velit molestias vero. Recusandae, id.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus praesentium quidem nulla voluptate corrupti quam vitae voluptatibus quisquam suscipit! Ut ullam aliquid ipsam harum doloremque aut commodi error at consectetur?</p>
+            <a href="https://www.hbomax.com/mx/es">Mas informacion</a>
+        </section>
+
+        <section>
+            <h2 class="centrado">Tubi</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, voluptatum magni. Totam porro, ipsa quos ex facilis maxime veniam quae possimus doloremque deleniti fugiat odit, repudiandae obcaecati inventore recusandae tempora.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repudiandae omnis perspiciatis. Iste natus, corporis porro praesentium eveniet earum ex placeat ratione ad expedita recusandae velit molestias vero. Recusandae, id.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus praesentium quidem nulla voluptate corrupti quam vitae voluptatibus quisquam suscipit! Ut ullam aliquid ipsam harum doloremque aut commodi error at consectetur?</p>
+            <a href="https://tubitv.com/">Mas informacion</a>
+        </section>
+
+        <section>
+            <h2 class="centrado">Discovery</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, voluptatum magni. Totam porro, ipsa quos ex facilis maxime veniam quae possimus doloremque deleniti fugiat odit, repudiandae obcaecati inventore recusandae tempora.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repudiandae omnis perspiciatis. Iste natus, corporis porro praesentium eveniet earum ex placeat ratione ad expedita recusandae velit molestias vero. Recusandae, id.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus praesentium quidem nulla voluptate corrupti quam vitae voluptatibus quisquam suscipit! Ut ullam aliquid ipsam harum doloremque aut commodi error at consectetur?</p>
+            <a href="https://www.discoveryplus.com/es/">Mas informacion</a>
+        </section>        
+    </main>
+
+
+    <footer id="Contacto" class="centrado">
+        <h2>Contacto de paginas de streaming</h2>
+        <form>
+            <fieldset>Contactame</fieldset>
+
+            <div class="derecho">
+                <label>Nombre</label>
+                <input type="text">
+            </div>
+
+            <div class="derecho">
+                <label>Email</label>
+                <input type="email">
+            </div>
+
+            <div class="derecho">
+                <label>Mensaje</label>
+                <textarea></textarea>
+            </div>
+
+            <div class="derecho">
+                <button type="submit" value="enviar">Enviar</button>
+            </div>
+        </form>
+    </footer>
+    
+
 </body>
 </html>
