--- a/index.html
+++ b/index.html
@@ -33,12 +33,16 @@
         .centrado {
             text-align: center;
         }
+
+        .izquierdo {
+            text-align: left;
+        }
     </style>
 
 </head>
 <body>
 
-    <head>
+    <header>
         <h1>Principales empresas de streaming</h1>
     
         <nav>
@@ -46,7 +50,7 @@
             <a href="#Contenido">Contenido</a>
             <a href="#Contacto">Contacto</a>
         </nav>
-    </head>
+    </header>
 
     <main id="Contenido">
         <section>
