--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
     <footer id="Contacto" class="centrado">
         <h2>Contacto de paginas de streaming</h2>
         <form>
-            <fieldset>Contactame</fieldset>
+            <fieldset>
+
+            <legend>Contactame</legend>
 
             <div class="derecho">
                 <label>Nombre</label>
@@ -126,6 +128,8 @@
             <div class="derecho">
                 <button type="submit" value="enviar">Enviar</button>
             </div>
+
+            </fieldset>
         </form>
     </footer>
     
