actualizacion de este dia

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Pagina de Empresas de streaming">
     <meta name="keywords" content="Empresas,streaming">
     <meta name="autor" content="Angel Alejandro Galaviz Rivera">
-    <link rel="icon" href="EHaKyGMXkAcyyw0.png">
+    <link rel="icon" href="Netflix-Symbol.png">
     <title>Empresas de streaming</title>
     <link rel="stylesheet" href="css/styless.css">
 </head>
@@ -55,7 +55,7 @@
                 <li>"Mindhunter" (Netflix)</li>
             </ul>
 
-            <a class="boton" href="#https://www.netflix.com/mx/">ir a Netflix</a>
+            <a class="boton" href="https://www.netflix.com/mx/">ir a Netflix</a>
 
             <div class="container">
                <iframe width="560" height="315" src="https://www.youtube.com/embed/LAm-jaQx4QY?si=lxfyhZ3dSfwHhrNj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -161,29 +161,26 @@
 
             <legend>Contactame</legend>
 
-            <div class="campo">
+            <div class="campo input-text">
                 <label>Nombre</label>
                 <input type="text">
             </div>
 
-            <div class="campo">
+            <div class="campo input-text">
                 <label>Email</label>
                 <input type="email">
             </div>
 
-            <div class="campo">
+            <div class="campo input-text">
                 <label>Mensaje</label>
                 <textarea></textarea>
             </div>
 
-            <div class="campo">
-                <button type="submit" value="enviar">Enviar</button>
+            <div class=" boton campo  input-text">
+                <a type="submit" value="enviar">Enviar</a>
             </div>
-
             </fieldset>
         </form>
     </footer>
-    
-
 </body>
 </html>
