--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <header id="inicio">
-        <h1 class="titulo">Principales empresas de streaming</h1>    
+        <h1 class="titulo">Empresas de streaming</h1>    
     </header>
 
     <div class="nav-bg">
