ultimo cambio para este repositorio

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <li>Mafia Amish</li>
             </ul>
 
-            <a class="boton" href="https://www.discoveryplus.com/es/">ir a Discovery</a>
+            <a class="boton" href="https://www.latamwbd.com/index/es">ir a Discovery</a>
 
 
             <div class="container">
